Added the corpus and grid.less.

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -13,6 +13,11 @@
     letter-spacing: -1px;
 }
 
+#banner__img {
+  width: 64px;
+  height: 64px;
+}
+
 .hero-unit {
     position: relative;
     padding: 30px 15px;
