--- a/client/app/app.less
+++ b/client/app/app.less
@@ -19,5 +19,17 @@
 @import 'account/login/login.less';
 @import 'admin/admin.less';
 @import 'main/main.less';
+@import 'corpus/borders.less';
+@import 'corpus/breakpoints.less';
+@import 'corpus/grid.less';
+@import 'corpus/positioning.less';
+@import 'corpus/reset.less';
+@import 'corpus/responsive.less';
+@import 'corpus/sizing.less';
+@import 'corpus/typography.less';
+@import 'corpus/utilities.less';
+@import 'corpus/variables.less';
+@import 'corpus/whitespace.less';
+@import 'grid.less';
 @import 'modal/modal.less';
 // endinjector
