--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -25,9 +25,4 @@ header#banner.hero-unit
 
 footer.footer
   .container
-    p
-      | Angular Fullstack v2.1.1
-      = ' | '
-      a(href='https://twitter.com/tyhenkel') @tyhenkel
-      = ' | '
-      a(href='https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open') Issues
+    p WebStarter version: {{ appVer }}
