--- a/client/app/admin/admin.jade
+++ b/client/app/admin/admin.jade
@@ -8,4 +8,4 @@ div(ng-include='"components/navbar/navbar.html"')
       br
       span.text-muted {{user.email}}
       a.trash(ng-click='delete(user)')
-        span.glyphicon.glyphicon-trash.pull-right
+        span.fa.fa-trash.pull-right
