--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -28,7 +28,7 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarCtrl')
 
         li(ng-show='isLoggedIn()', ng-class='{active: isActive("/settings")}')
           a(href='/settings')
-            span.glyphicon.glyphicon-cog
+            span.fa.fa-cog
 
         li(ng-show='isLoggedIn()', ng-class='{active: isActive("/logout")}')
           a(href='', ng-click='logout()') Logout
