--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -1,20 +1,39 @@
-div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarCtrl')
-  div.container
-    div.navbar-header
-      button.navbar-toggle(type='button', ng-click='isCollapsed = !isCollapsed')
-        span.sr-only Toggle navigation
+nav.navbar.navbar-default(ng-controller='NavbarCtrl')
+  .container-fluid
+    .navbar-header
+      button.navbar-toggle.collapsed(
+      type='button', data-toggle='collapse', data-target='#navbar-main', aria-expanded='false')
+        span.sr-only Navigation menu
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') projects
+      a.navbar-brand(href='/', target="_blank") Logo
 
-    div#navbar-main.navbar-collapse.collapse(collapse='isCollapsed')
+    #navbar-main.collapse.navbar-collapse
       ul.nav.navbar-nav
         li(ng-repeat='item in menu', ng-class='{active: isActive(item.link)}')
           a(ng-href='{{item.link}}') {{item.title}}
 
         li(ng-show='isAdmin()', ng-class='{active: isActive("/admin")}')
           a(href='/admin') Admin
+
+        //li.dropdown
+        //  a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true',
+        //  aria-expanded='false') Dropdown1
+        //    span.caret
+        //  ul.dropdown-menu
+        //    li
+        //      a(href='#') Action
+        //    li
+        //      a(href='#') Another action
+        //    li
+        //      a(href='#') Something else here
+        //    li.divider(role='separator')
+        //    li
+        //      a(href='#') Separated link
+        //    li.divider(role='separator')
+        //    li
+        //      a(href='#') One more separated link
 
       ul.nav.navbar-nav.navbar-right
         li(ng-hide='isLoggedIn()', ng-class='{active: isActive("/signup")}')
