e2e: adding new item (still no cleanup on exit).

--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -21,7 +21,7 @@ header#banner.hero-unit
     p.input-group
       input.form-control(type='text', placeholder='Add a new thing here.', ng-model='newThing')
       span.input-group-btn
-        button.btn.btn-primary(type='submit', ng-click='addThing()') Add New
+        button.btn.btn-primary.btn-add-new(type='submit', ng-click='addThing()') Add New
 
 footer.footer
   .container
